--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "babel-node": "babel-node",
     "build": "cross-env NODE_ENV=production babel src --out-dir dist --source-maps inline",
+    "webpack": "webpack --config webpack.config.js",
     "prepublishOnly": "npm run build",
     "test": "jest"
   },
@@ -29,6 +30,8 @@
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-jest": "^23.8.2",
     "jest": "^25.4.0",
-    "jest-cli": "^25.4.0"
+    "jest-cli": "^25.4.0",
+    "webpack": "^5.15.0",
+    "webpack-cli": "^4.3.1"
   }
 }
