--- a/package.json
+++ b/package.json
@@ -5,15 +5,17 @@
   "main": "index.js",
   "scripts": {
     "babel-node": "babel-node",
-    "build": "cross-env NODE_ENV=production babel src --out-dir dist --source-maps inline",
-    "webpack": "webpack --config webpack.config.js",
+    "node": "cross-env NODE_ENV=production babel src --out-dir dist --source-maps inline",
+    "dev": "webpack --config webpack.config.js --mode development --watch",
+    "build": "webpack --config webpack.config.js --mode production",
     "prepublishOnly": "npm run build",
     "test": "jest"
   },
   "author": "AlexShcherbackov",
   "license": "ISC",
   "dependencies": {
-    "lodash": "^4.17.15"
+    "lodash": "^4.17.15",
+    "normalize.css": "^8.0.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.8.4",
@@ -23,14 +25,19 @@
     "@babel/preset-env": "^7.9.5",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^25.4.0",
+    "clean-webpack-plugin": "^3.0.0",
     "cross-env": "^7.0.2",
+    "css-loader": "^5.0.1",
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.1.0",
     "eslint-plugin-babel": "^5.3.0",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-jest": "^23.8.2",
+    "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^4.5.1",
     "jest": "^25.4.0",
     "jest-cli": "^25.4.0",
+    "style-loader": "^2.0.0",
     "webpack": "^5.15.0",
     "webpack-cli": "^4.3.1"
   }
