--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   "scripts": {
     "babel-node": "babel-node",
     "node": "cross-env NODE_ENV=production babel src --out-dir dist --source-maps inline",
-    "dev": "webpack --config webpack.config.js --mode development --watch",
-    "build": "webpack --config webpack.config.js --mode production",
+    "serve": "cross-env NODE_ENV=development webpack serve --config webpack.config.js --mode development --open",
+    "dev": "cross-env NODE_ENV=development webpack --config webpack.config.js --mode development",
+    "build": "cross-env NODE_ENV=production webpack --config webpack.config.js --mode production",
     "prepublishOnly": "npm run build",
     "test": "jest"
   },
@@ -26,6 +27,7 @@
     "babel-eslint": "^10.1.0",
     "babel-jest": "^25.4.0",
     "clean-webpack-plugin": "^3.0.0",
+    "copy-webpack-plugin": "^7.0.0",
     "cross-env": "^7.0.2",
     "css-loader": "^5.0.1",
     "eslint": "^6.8.0",
@@ -37,8 +39,12 @@
     "html-webpack-plugin": "^4.5.1",
     "jest": "^25.4.0",
     "jest-cli": "^25.4.0",
+    "mini-css-extract-plugin": "^1.3.4",
+    "optimize-css-assets-webpack-plugin": "^5.0.4",
     "style-loader": "^2.0.0",
+    "terser-webpack-plugin": "^5.1.1",
     "webpack": "^5.15.0",
-    "webpack-cli": "^4.3.1"
+    "webpack-cli": "^4.3.1",
+    "webpack-dev-server": "^3.11.2"
   }
 }
