--- a/package.json
+++ b/package.json
@@ -40,7 +40,10 @@
     "jest": "^25.4.0",
     "jest-cli": "^25.4.0",
     "mini-css-extract-plugin": "^1.3.4",
+    "node-sass": "^5.0.0",
     "optimize-css-assets-webpack-plugin": "^5.0.4",
+    "postcss-loader": "^4.1.0",
+    "sass-loader": "^10.1.1",
     "style-loader": "^2.0.0",
     "terser-webpack-plugin": "^5.1.1",
     "webpack": "^5.15.0",
